CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(mc++)
OPTION(USE_INTERNAL_MD5 "Use internal md5 library?" ON)
INCLUDE(${CMAKE_SOURCE_DIR}/FindGettext2.cmake)
IF(GETTEXT_FOUND)
  ADD_DEFINITIONS(-DHAVE_GETTEXT -DLOCALEDIR="${CMAKE_INSTALL_PREFIX}/share/locale")
ENDIF(GETTEXT_FOUND)
INCLUDE(CheckIncludeFile)
INCLUDE(CheckIncludeFileCXX)
CHECK_INCLUDE_FILE(openssl/md5.h HAVE_OPENSSL)
IF(NOT HAVE_OPENSSL)
  MESSAGE(FATAL_ERROR "OpenSSL is not found!")
ENDIF(NOT HAVE_OPENSSL)
CHECK_INCLUDE_FILE(beecrypt/md5.h HAVE_BEECRYPT)
CHECK_INCLUDE_FILE(gcrypt.h HAVE_GCRYPT)
CHECK_INCLUDE_FILE(mhash.h HAVE_MHASH)
CHECK_INCLUDE_FILE_CXX(crypto++/md5.h HAVE_CRYPTOPP)
CHECK_INCLUDE_FILE_CXX(botan/md5.h HAVE_BOTAN)
CHECK_INCLUDE_FILE(gnutls/gnutls.h HAVE_GNUTLS)
IF(USE_INTERNAL_MD5)
  ADD_DEFINITIONS(-DUSE_INTERNAL_MD5)
ENDIF(USE_INTERNAL_MD5)
ADD_DEFINITIONS(
  -DHAVE_OPENSSL=0${HAVE_OPENSSL}
  -DHAVE_BEECRYPT=0${HAVE_BEECRYPT}
  -DHAVE_GCRYPT=0${HAVE_GCRYPT}
  -DHAVE_MHASH=0${HAVE_MHASH}
  -DHAVE_CRYPTOPP=0${HAVE_CRYPTOPP}
  -DHAVE_BOTAN=0${HAVE_BOTAN}
  -DHAVE_GNUTLS=0${HAVE_GNUTLS})
ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(lib)
ADD_SUBDIRECTORY(benchmark)
ADD_SUBDIRECTORY(po)

