ADD_EXECUTABLE(benchmark benchmark.cxx)
IF(HAVE_BEECRYPT)
  LIST(APPEND BENCHMARK_LIBS beecrypt)
ENDIF(HAVE_BEECRYPT)
IF(HAVE_GCRYPT)
  LIST(APPEND BENCHMARK_LIBS gcrypt)
ENDIF(HAVE_GCRYPT)
IF(HAVE_MHASH)
  LIST(APPEND BENCHMARK_LIBS mhash)
ENDIF(HAVE_MHASH)
IF(HAVE_OPENSSL)
  LIST(APPEND BENCHMARK_LIBS crypto)
ENDIF(HAVE_OPENSSL)
IF(HAVE_CRYPTOPP)
  LIST(APPEND BENCHMARK_LIBS crypto++ pthread)
ENDIF(HAVE_CRYPTOPP)
IF(HAVE_BOTAN)
  LIST(APPEND BENCHMARK_LIBS botan)
ENDIF(HAVE_BOTAN)
IF(HAVE_GNUTLS)
  LIST(APPEND BENCHMARK_LIBS gnutls)
ENDIF(HAVE_GNUTLS)
IF(USE_INTERNAL_MD5)
  INCLUDE_DIRECTORIES(../lib)
  LIST(APPEND BENCHMARK_LIBS md5)
ENDIF(USE_INTERNAL_MD5)
TARGET_LINK_LIBRARIES(benchmark ${BENCHMARK_LIBS})

